Icons for selections

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
                     </div>
 
                     <a href="javascript:void(0)" class="panel-options" title="Add options to selected panels">
-                        <span class="icon-message"></span>
+                        <span class="icon-message"></span><span class="a-tooltip">Add options to selected panels</span>
                     </a>
                     <a href="javascript:void(0)" class="panel-delete" title="Delete selected panels">
-                        <span class="icon-delete"></span>
+                        <span class="icon-delete"></span><span class="a-tooltip">Delete selected panels</span>
                     </a>
                     <a href="javascript:void(0)" class="panel-deselect" title="Clear selection">
-                        <span class="icon-layers_clear"></span>
+                        <span class="icon-layers_clear"></span><span class="a-tooltip">Clear selected panels</span>
                     </a>
                 </div>
             </div>
