--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="css/style.css" rel="stylesheet"/>
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12 col-lg-9">
                 <div id="sketch" class="sketch"></div>
