--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="lib/jquery-ui.drag-multiple.js"></script>
     <script src="lib/jquery-ui.touch-punch.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <script src="custom.js"></script>
@@ -23,42 +26,25 @@
                 <div id="sketch" class="sketch"></div>
             </div>
             <div class="cols-xs-12 col-lg-3">
+                <ul class="nav nav-tabs" id="myTab" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" data-toggle="tab" href="#portrait" role="tab" aria-controls="home">Portrait</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="tab" href="#landscape" role="tab" aria-controls="profile">Landscape</a>
+                    </li>
+                </ul>
                 <div class="tools">
-                    <div class="options clearfix">
-                        <h2>Single Panel</h2>
-                        <div class="draggable style-1 solar-panel" data-qty="1">
-                            <p>Poly</p>
-                            <p class="small">1.65x1m</p>
+                    <div class="tab-content">
+                        <div class="tab-pane active" id="portrait" role="tabpanel">
+                            <div class="options portrait clearfix">
+                            </div>
                         </div>
-                        <div class="draggable style-2 solar-panel" data-qty="1">
-                            <p>Mono</p>
-                            <p class="small">1.65x1m</p>
-                        </div>
-                        <div class="draggable style-3 solar-panel" data-qty="1">
-                            <p>Mono Black</p>
-                            <p class="small">1.65x1m</p>
-                        </div>
-                        <div class="clearfix"></div>
-                        <h2>Obstacles</h2>
-                        <div class="draggable obstacle-1 solar-panel obstacle" data-qty="1">
-                            <p class="small">1x1m</p>
-                        </div>
-                        <div class="clearfix"></div>
-                        <h2>Six panels simultaneosly</h2>
-                        <div id="panel1" class="draggable style-1 solar-panel" data-qty="6">
-                            <p>Poly</p>
-                            <p class="small">1.65x1m</p>
-                        </div>
-                        <div id="panel2" class="draggable style-2 solar-panel" data-qty="6">
-                            <p>Mono</p>
-                            <p class="small">1.65x1m</p>
-                        </div>
-                        <div id="panel3" class="draggable style-3 solar-panel" data-qty="6">
-                            <p>Mono Black</p>
-                            <p class="small">1.65x1m</p>
+                        <div class="tab-pane" id="landscape" role="tabpanel">
+                            <div class="options landscape clearfix">
+                            </div>
                         </div>
                     </div>
-
                     <a href="javascript:void(0)" class="panel-options" title="Add options to selected panels">
                         <span class="icon-message"></span><span class="a-tooltip">Add options to selected panels</span>
                     </a>
