--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="form-check">
+                        <label class="form-check-label">
+                            <input class="form-check-input show-measurement" type="checkbox" value="1" checked="checked">
+                            <span>Show Measurements</span>
+                        </label>
+                    </div>
                     <a href="javascript:void(0)" class="panel-options" title="Add options to selected panels">
                         <span class="icon-message"></span><span class="a-tooltip">Add options to selected panels</span>
                     </a>
